Quick Kill Changes

--- a/force-app/main/default/lwc/absli_quickkill/absli_quickkill.html
+++ b/force-app/main/default/lwc/absli_quickkill/absli_quickkill.html
@@ -126,7 +126,7 @@
             <button class="slds-button slds-button_brand" onclick={handleGenerateLinkPrev}>Generate Link &
                 Preview</button>
         </template>
-        <template if:true={showPreview}>
+        <template if:true={showSendButton}>
             <button class="slds-button slds-button_brand" onclick={handleSend}>Send</button>
         </template>
 
