--- a/force-app/main/default/lwc/asf_CreateCaseWithProspect/asf_CreateCaseFromProspect.html
+++ b/force-app/main/default/lwc/asf_CreateCaseWithProspect/asf_CreateCaseFromProspect.html
@@ -71,10 +71,12 @@
                                 </lightning-combobox>
                             </template>
 
-                            <lightning-checkbox-group name="nocomm" class="slds-p-top_small"
-                                label="No Auto Communication" options={noAutoCommOptions} value={noAutoCommValue}
-                                onchange={handleAutoCommChange}>
-                            </lightning-checkbox-group>
+                            <template if:true={boolNoAutoComm}>
+                                <lightning-checkbox-group name="nocomm" class="slds-p-top_small"
+                                    label="No Auto Communication" options={noAutoCommOptions} value={noAutoCommValue}
+                                    onchange={handleAutoCommChange}>
+                                </lightning-checkbox-group>
+                            </template>
                         </template>
 
 
