ABSLIG Add On Changes V1.7

--- a/force-app/main/default/lwc/asf_CreateCaseWithProspect/asf_CreateCaseFromProspect.html
+++ b/force-app/main/default/lwc/asf_CreateCaseWithProspect/asf_CreateCaseFromProspect.html
@@ -61,6 +61,7 @@
                             <template if:true={boolAllSourceVisible}>
                                 <lightning-combobox data-id="Source Field" value={sourceFldValue} label="Source"
                                     options={sourceFldOptions} onchange={handleSource} placeholder={strSource}
+                                    disabled={boolSourceComboboxDisabled}
                                     required>
                                 </lightning-combobox>
                             </template>
