--- a/force-app/main/default/lwc/absli_reconfirminput/absli_reconfirminput.html
+++ b/force-app/main/default/lwc/absli_reconfirminput/absli_reconfirminput.html
@@ -2,7 +2,7 @@
   @description       : 
   @author            : ChangeMeIn@UserSettingsUnder.SFDoc
   @group             : 
-  @last modified on  : 06-27-2024
+  @last modified on  : 07-30-2024
   @last modified by  : ChangeMeIn@UserSettingsUnder.SFDoc
 -->
 <template>
@@ -32,7 +32,10 @@
                     onchange={handleConfirmTextChange}></lightning-input>
                 <template if:true={isMobileNumberError}>
                     <div class="slds-text-color_error slds-m-top_small">Invalid Mobile Number for selected Country Code. India - 10 digits, Other - 15 digits</div>
-                </template>              
+                </template>
+                <template if:true={isInvalidMobileNumberError}>
+                    <div class="slds-text-color_error slds-m-top_small">Invalid Mobile Number.</div>
+                </template>                
             </div>
             <div class="slds-modal__footer">
                 <lightning-button class="slds-m-around_small" label="Cancel"
