--- a/force-app/main/default/lwc/asf_GlobalSearchCustom/asf_GlobalSearchCustom.html
+++ b/force-app/main/default/lwc/asf_GlobalSearchCustom/asf_GlobalSearchCustom.html
@@ -44,11 +44,11 @@
                             id="primary-search-combobox-id-3">
                             <div class="slds-combobox__form-element slds-input-has-icon slds-input-has-icon_left slds-global-search__form-element"
                                 role="none">
-                                <lightning-button variant="brand" label="Create Case with new Prospect"
+                                <lightning-button variant="brand" label={createCaseWithNewProspect}
                             title="Create Case with new Prospect" onclick={handleCaseWithProspect}
                             class="slds-m-left_x-small"></lightning-button>
                             <template if:true={isSalesProspectVisible}>
-                                <lightning-button variant="brand" label="Create Sales Prospect"
+                                <lightning-button variant="brand" label={createSalesProspectLabel}
                                 title="Create Case with new Prospect" onclick={handleSalesProspet}
                                 class="slds-m-left_x-small"></lightning-button>
                             </template>
@@ -180,7 +180,7 @@
                             size="small"></lightning-icon>
                         <span class="slds-assistive-text">Close</span>
                     </button>
-                    <h2 id="modal-heading-03" class="slds-text-heading_medium slds-hyphenate">Create Sales Prospect
+                    <h2 id="modal-heading-03" class="slds-text-heading_medium slds-hyphenate">{createSalesProspectLabel}
                     </h2>
                 </header>
 
@@ -215,7 +215,7 @@
                         </lightning-record-edit-form>
                         <div class="slds-modal__footer">
                             <button class="slds-button slds-button_brand" onclick={createSalesProspect}
-                                disabled={disableCreateBtn}>Create Sales Prospect</button>
+                                disabled={disableCreateBtn}>{createSalesProspectLabel}</button>
 
                         </div>
                     </div>
