ABSLI Fetch Bank Details update

--- a/force-app/main/default/lwc/absli_FetchBankDetails/absli_FetchBankDetails.html
+++ b/force-app/main/default/lwc/absli_FetchBankDetails/absli_FetchBankDetails.html
@@ -2,7 +2,7 @@
   @description       : 
   @author            : ChangeMeIn@UserSettingsUnder.SFDoc
   @group             : 
-  @last modified on  : 07-25-2024
+  @last modified on  : 08-06-2024
   @last modified by  : ChangeMeIn@UserSettingsUnder.SFDoc
 -->
 <template>
@@ -54,7 +54,7 @@
                     <button class="slds-button slds-button_neutral" onclick={handleFetchDetails} title="Fetch Details">Fetch Details</button>
                 </template>
 
-                    <button class="slds-button slds-button_neutral" onclick={handleUpdate} title="Update">Update</button>
+                    <button class="slds-button slds-button_neutral" onclick={handleUpdateFromFieldPopUp} title="Update">Update</button>
             </footer>
         </div>
     </section>
