Disabling Input for Name Field

--- a/force-app/main/default/lwc/absli_fetchPANDetails/absli_fetchPANDetails.html
+++ b/force-app/main/default/lwc/absli_fetchPANDetails/absli_fetchPANDetails.html
@@ -27,7 +27,7 @@
                                 </lightning-layout-item>
                                 <lightning-layout-item padding="around-small" size="12">
                                     <lightning-input type="text" label="Name" required
-                                        value={clientName} disabled={showFetchResponse}></lightning-input>
+                                        value={clientName} disabled=true></lightning-input>
                                 </lightning-layout-item>
                                 <lightning-layout-item padding="around-small" size="12">
                                     <lightning-input type="date" label="Date of Birth" max={todayDt} required
