--- a/force-app/main/default/lwc/absli_FetchBankDetails/absli_FetchBankDetails.html
+++ b/force-app/main/default/lwc/absli_FetchBankDetails/absli_FetchBankDetails.html
@@ -2,7 +2,7 @@
   @description       : 
   @author            : ChangeMeIn@UserSettingsUnder.SFDoc
   @group             : 
-  @last modified on  : 08-06-2024
+  @last modified on  : 08-07-2024
   @last modified by  : ChangeMeIn@UserSettingsUnder.SFDoc
 -->
 <template>
@@ -40,7 +40,9 @@
                             <template if:true={showErrorMsg}>
                                 <p>{errorMessage}</p>
                             </template>
-
+                            <template if:true={showSpinner}>
+                                <lightning-spinner alternative-text="Loading"></lightning-spinner>
+                            </template>
 
                         </lightning-layout>
                     </div>
