--- a/force-app/main/default/lwc/absli_fundvaluecomp/absli_fundvaluecomp.html
+++ b/force-app/main/default/lwc/absli_fundvaluecomp/absli_fundvaluecomp.html
@@ -61,6 +61,9 @@
         </div>
 
     </template>
+    <template if:true={showLoading}>
+        <lightning-spinner alternative-text="Loading" size="large"></lightning-spinner>
+    </template>
     <div class="slds-modal__footer">
         <button class="slds-button slds-button_neutral" aria-label="Cancel and close"
             onclick={invokeCloseModal}>Cancel</button>
@@ -72,10 +75,9 @@
         <template if:true={showPreview}>
             <button class="slds-button slds-button_neutral" onclick={handleBack}>Back</button>
         </template>
-        <template if:true={showPreview}>
+        <template if:true={showSendButton}>
             <button class="slds-button slds-button_brand" onclick={handleSend}>Send</button>
         </template>
 
     </div>
-
 </template>
