Checklist Mandatory UI changes

--- a/force-app/main/default/lwc/aSF_pendingCaseChecklistEdit/aSF_pendingCaseChecklistEdit.html
+++ b/force-app/main/default/lwc/aSF_pendingCaseChecklistEdit/aSF_pendingCaseChecklistEdit.html
@@ -37,7 +37,9 @@
                             <lightning-helptext content={accItem.Description__c} ></lightning-helptext> 
                           </td>
                           <td data-label="Label">
-                            <div class="slds-cell-wrap" style = "width:180px" title={accItem.Label__c}>{accItem.Label__c}</div>
+                            <div class="slds-cell-wrap" style = "width:180px" title={accItem.Label__c}><template if:true={accItem.Mandatory__c}>
+                                <abbr class="slds-required" title="required">* </abbr>
+                            </template>{accItem.Label__c}</div>
                             </td>
                            
                           <!---
