--- a/force-app/main/default/lwc/abhfl_GenericRepeatingAndOpenComplaintCase/abhfl_GenericRepeatingAndOpenComplaintCase.html
+++ b/force-app/main/default/lwc/abhfl_GenericRepeatingAndOpenComplaintCase/abhfl_GenericRepeatingAndOpenComplaintCase.html
@@ -54,7 +54,7 @@
                     <div class="slds-col slds-size_1-of-4 custom-box"><h2>NPS</h2><p class="text-8xl">{showCustomerNPSbyNumber}</p></div>
                     <div class="slds-col slds-size_1-of-4 custom-box"><h2>Open Cases</h2><p class="text-6xl">{showOpenCase}</p></div>
                     <div class="slds-col slds-size_1-of-4 custom-box"><h2>Open Complaints</h2><p class="text-6xl">{showOpenComplaintCase}</p></div>
-                    <div class="slds-col slds-size_1-of-4 custom-box"><h2>Escalated Cases</h2><p class="text-6xl">{showEscalatedCases}</p></div>
+                    <div class="slds-col slds-size_1-of-4 custom-box"><h2>Open Escalated Cases</h2><p class="text-5xl">{showEscalatedCases}</p></div>
                 </div>
             </template>
             <template if:false={isAbhfl}>
