--- a/force-app/main/default/lwc/abhi_ActiveDaysDashboard/abhi_ActiveDaysDashboard.html
+++ b/force-app/main/default/lwc/abhi_ActiveDaysDashboard/abhi_ActiveDaysDashboard.html
@@ -23,12 +23,12 @@
                         label="From Date" class="inpFieldCheckValidity" format='YYYY-MM-dd' disabled={disabled}>
                     </lightning-input>
                 </lightning-layout-item>
-                                <lightning-layout-item size="4" class="slds-m-right_small">
-                    <lightning-input type="date" name="Enddate" value={endDate} onchange={handleEndDateChange} min={startDate}
-                        label="End Date" message-when-range-underflow="Please Choose a date more than start date"
-                        class="inpFieldCheckValidity" format='YYYY-MM-dd' disabled={disabled}>
-                    </lightning-input>
-                </lightning-layout-item>
+                    <lightning-layout-item size="4" class="slds-m-right_small">
+                        <lightning-input type="date" name="Enddate" value={endDate} onchange={handleEndDateChange} min={startDate}
+                            label="End Date" message-when-range-underflow="Please Choose a date more than start date"
+                            class="inpFieldCheckValidity" format='YYYY-MM-dd' disabled={isEndDateDisabled}>
+                        </lightning-input>
+                    </lightning-layout-item>
                 <lightning-layout-item size="auto" class="slds-m-top_medium slds-m-left_medium">
                     <lightning-button variant="brand" label="Search" onclick={handleSearch} disabled={isSearchDisabled} ></lightning-button>
                 </lightning-layout-item>                
