--- a/force-app/main/default/lwc/abhi_FALevelDetails/abhi_FALevelDetails.html
+++ b/force-app/main/default/lwc/abhi_FALevelDetails/abhi_FALevelDetails.html
@@ -16,7 +16,7 @@
                 </lightning-layout-item>
                                 <lightning-layout-item size="4" class="slds-m-right_small">
                     <lightning-input type="date" name="Enddate" value={endDate} onchange={handleEndDateChange} min={startDate}
-                        label="End Date" class="inpFieldCheckValidity" format='YYYY-MM-dd' disabled={disabled}>
+                        label="End Date" message-when-range-underflow="Please Choose a date more than start date" class="inpFieldCheckValidity" format='YYYY-MM-dd' disabled={isEndDateDisabled}>
                     </lightning-input>
                 </lightning-layout-item>
                 <lightning-layout-item  class="slds-m-right_small" style="padding-top:19px">
