--- a/force-app/main/default/lwc/abhi_ViewPolicyInformation_LWC/abhi_ViewPolicyInformation_LWC.html
+++ b/force-app/main/default/lwc/abhi_ViewPolicyInformation_LWC/abhi_ViewPolicyInformation_LWC.html
@@ -9,14 +9,19 @@
                 </div>
                 <div>
                     <lightning-button-icon onclick={refreshData} icon-name="utility:refresh" size="medium"
-                        alternative-text="Refresh"
-                        class="slds-float_right slds-m-top_xx-small slds-m-right_xx-small"></lightning-button-icon>
+                        alternative-text="Refresh" class="slds-float_right"></lightning-button-icon>
                 </div>
             </header>
         </div>
         <div class="slds-card__body slds-card__body_inner">
             <template if:true={isLoadingData}>
                 <lightning-spinner alternative-text="Loading" size="small"></lightning-spinner>
+            </template>
+            <template if:true={apiErrorMessage}>
+                <div>
+                    <lightning-formatted-text class="slds-text-color_error"
+                        value={apiErrorMessage}></lightning-formatted-text>
+                </div>
             </template>
             <template if:true={apiErrorMessage}>
                 <div class="slds-grid slds-align_absolute-center slds-box slds-box_xx-small slds-text-color_error slds-m-bottom_medium" style="font-size: 1.25rem; max-width: 80%; text-align: center;">
