--- a/force-app/main/default/lwc/abhi_ActiveDaysDashboard/abhi_ActiveDaysDashboard.html
+++ b/force-app/main/default/lwc/abhi_ActiveDaysDashboard/abhi_ActiveDaysDashboard.html
@@ -24,9 +24,8 @@
                     </lightning-input>
                 </lightning-layout-item>
                     <lightning-layout-item size="4" class="slds-m-right_small">
-                        <lightning-input type="date" name="Enddate" value={endDate} onchange={handleEndDateChange} min={startDate}
-                            label="End Date" message-when-range-underflow="Please Choose a date more than start date"
-                            class="inpFieldCheckValidity" format='YYYY-MM-dd' disabled={isEndDateDisabled}>
+                        <lightning-input type="date" name="Enddate" value={endDate} onchange={handleEndDateChange} 
+                            label="End Date" class="inpFieldCheckValidity" format='YYYY-MM-dd'>
                         </lightning-input>
                     </lightning-layout-item>
                 <lightning-layout-item size="auto" class="slds-m-top_medium slds-m-left_medium">
