--- a/force-app/main/default/lwc/abhi_ActiveDaysDashboard/abhi_ActiveDaysDashboard.html
+++ b/force-app/main/default/lwc/abhi_ActiveDaysDashboard/abhi_ActiveDaysDashboard.html
@@ -32,6 +32,12 @@
                     <lightning-button variant="brand" label="Search" onclick={handleSearch} disabled={isSearchDisabled} ></lightning-button>
                 </lightning-layout-item>                
             </lightning-layout>
+            <template if:true={displayErrorSearch}>
+                <div class="slds-grid slds-align_absolute-center slds-box slds-box_xx-small slds-text-color_error slds-m-bottom_medium" style="font-size: 1.25rem; max-width: 80%; text-align: center;">
+                    <lightning-icon icon-name="utility:error" alternative-text="Error" size="small" class="slds-m-right_small"></lightning-icon>
+                    {errorMessageSearch}
+                </div>
+            </template>    
         </div>
 
             <template if:true={showDataTable}>
