--- a/force-app/main/default/lwc/abhi_FAHistoryDetails/abhi_FAHistoryDetails.html
+++ b/force-app/main/default/lwc/abhi_FAHistoryDetails/abhi_FAHistoryDetails.html
@@ -12,8 +12,11 @@
     <lightning-card
     variant="narrow" >
         <h1 slot="title">{label.faTitle}</h1> 
-        <div lwc:if={isLoading} style="height: 200px; position:relative"  >
-            <lightning-spinner alternative-text="Loading" variant="base" size="medium"></lightning-spinner>
+        <div lwc:if={isLoading} >
+            <div class="slds-backdrop" role="presentation"></div>
+                <div class="slds-fade-in-open slds-modal_large">
+                    <lightning-spinner alternative-text="Loading" size="large"></lightning-spinner>
+                </div>
         </div>
         <div lwc:if = {displayError}>
             {label.errorMessage}
