--- a/force-app/main/default/lwc/abhi_ViewPolicyInformation_LWC/abhi_ViewPolicyInformation_LWC.html
+++ b/force-app/main/default/lwc/abhi_ViewPolicyInformation_LWC/abhi_ViewPolicyInformation_LWC.html
@@ -17,7 +17,8 @@
                 </div>
                 <div>
                     <lightning-button-icon onclick={refreshData} icon-name="utility:refresh" size="medium"
-                        alternative-text="Refresh" class="slds-float_right"></lightning-button-icon>
+                        alternative-text="Refresh"
+                        class="slds-float_right slds-m-top_xx-small slds-m-right_xx-small"></lightning-button-icon>
                 </div>
             </header>
         </div>
