--- a/force-app/main/default/lwc/asf_RecategoriseCase/reparentingCase.html
+++ b/force-app/main/default/lwc/asf_RecategoriseCase/reparentingCase.html
@@ -186,12 +186,12 @@
                             <br>
 
 
-                            <lightning-record-edit-form object-api-name="Case" record-id={recordId} data-id="caseEditForm" onload={resetToBlank}>
+                            <lightning-record-edit-form object-api-name="Case" record-id={recordId}>
                                 <lightning-messages></lightning-messages>
                                 <lightning-input-field field-name="Recategorisation_Reason__c" data-id="rejectReason"
                                     required=true value={rejectionReasonVal}>
                                 </lightning-input-field>
-                                <lightning-input-field field-name="Business_Unit__c" data-id="bizUnit"
+                                <lightning-input-field field-name="Business_Unit__c" data-id="bizUnit" value={caseBUVal}
                                     class="slds-hide">
                                 </lightning-input-field>
                                 <template if:true={showBotFeedbackDropdown}>
