Updating toast messages.

--- a/force-app/main/default/lwc/asf_Case360/asf_Case360.html
+++ b/force-app/main/default/lwc/asf_Case360/asf_Case360.html
@@ -320,10 +320,9 @@
                                         options={closureTypeOptions} value={closureTypeSelected} type="button"
                                         onchange={handleClosureTypeChange}></lightning-radio-group>
                                     <!-- VIRENDRA - ADDED CHECK FOR BU SPECIFIC VISIBILITY OF FIELDS.-->
-                                    <!-- NEERAJ - MADE THE REQUIRED ATTRIBUTE DYNAMIC TO MAKE IT NON-REQUIRED || PR1030924-43-->
                                     <template lwc:if={eligibleForBU}>
                                         <template lwc:if={showRejectPanel}>
-                                            <lightning-textarea name="rejectedReason" class="ReasonInput validate" required={eligibleForAMSLAMC}
+                                            <lightning-textarea name="rejectedReason" class="ReasonInput validate" required
                                                 label="Close Unresolved Details" variant="label-stacked"
                                                 value={rejectedReason} onchange={setRejectedReason}
                                                 placeholder="type here..."></lightning-textarea>
