--- a/force-app/main/default/lwc/abhi_HHS_Active/abhi_HHS_Active.html
+++ b/force-app/main/default/lwc/abhi_HHS_Active/abhi_HHS_Active.html
@@ -15,15 +15,30 @@
         </div>
         <br/>
         <!-- Data Tables -->
-        <template if:true={showDataTable}>
-            <lightning-datatable
-                key-field="code"
-                data={recordTable}
-                columns={columns}
-                hide-checkbox-column
-            ></lightning-datatable>
-            <br/>
-            <br/>
+
+
+        <template if:true={showTable}>
+            <table class="slds-table slds-table_bordered slds-table_cell-buffer slds-table_fixed-layout">
+                <thead>
+                    <tr class="slds-text-title_caps">
+                        <th>Healthy Heart</th>
+                        <th>Score</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <template for:each={table} for:item="item">
+                        <tr key={item.name}>
+                            <td>{item.name}</td>
+                            <td>{item.value}</td>
+                        </tr>
+                    </template>
+                </tbody>
+            </table>
+        </template>
+<br/>
+<br/>
+        <template if:true={showDataTable}> 
+
             <lightning-datatable
                 key-field="name"
                 data={recordTable2}
@@ -77,7 +92,7 @@
         <template if:true={displayError}>
             <div class="slds-grid slds-align_absolute-center slds-box slds-box_xx-small slds-text-color_error slds-m-bottom_medium" style="font-size: 1.25rem; max-width: 80%; text-align: center;">
                 <lightning-icon icon-name="utility:error" alternative-text="Error" size="small" class="slds-m-right_small"></lightning-icon>
-                {errorMessages}
+                <span style="font-size: 0.90rem;">{errorMessages}</span>
             </div>
         </template>
     </lightning-card>
