--- a/force-app/main/default/lwc/abhi_HHS_Active/abhi_HHS_Active.html
+++ b/force-app/main/default/lwc/abhi_HHS_Active/abhi_HHS_Active.html
@@ -7,20 +7,86 @@
 
             </div>
         </div>
-        <template if:true={isLoading}>
-            <div class="slds-backdrop" role="presentation"></div>
-            <div class="slds-fade-in-open slds-modal_large">
-                <lightning-spinner alternative-text="Loading" size="large"></lightning-spinner>
+        <br/>
+        <!-- Data Tables -->
+
+
+        <template if:true={showTable}>
+            <table class="slds-table slds-table_bordered slds-table_cell-buffer slds-table_fixed-layout">
+                <thead>
+                    <tr class="slds-text-title_caps">
+                        <th>Healthy Heart</th>
+                        <th>Score</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <template for:each={table} for:item="item">
+                        <tr key={item.name}>
+                            <td>{item.name}</td>
+                            <td>{item.value}</td>
+                        </tr>
+                    </template>
+                </tbody>
+            </table>
+        </template>
+<br/>
+<br/>
+        <template if:true={showDataTable}> 
+
+            <lightning-datatable
+                key-field="name"
+                data={recordTable2}
+                columns={columns2}
+                hide-checkbox-column
+            ></lightning-datatable>
+
+            <!-- Pagination Controls -->
+            <div class="slds-align_absolute-center" style="height:5rem">
+                <lightning-button 
+                    disabled={bDisableFirst} 
+                    icon-name="utility:jump_to_left" 
+                    label="First"
+                    class="slds-p-horizontal_x-small" 
+                    alternative-text="first page" 
+                    onclick={firstPage}>
+                </lightning-button>
+                <lightning-button 
+                    disabled={bDisableFirst} 
+                    icon-name="utility:chevronleft" 
+                    label="Previous"
+                    alternative-text="Previous" 
+                    onclick={previousPage}>
+                </lightning-button>
+                &nbsp;
+                <span class="slds-badge">
+                    Showing {pageNumber} &nbsp;of&nbsp; {totalPages} &nbsp;&nbsp;Page(s)
+                </span>
+                &nbsp;
+                <lightning-button 
+                    disabled={bDisableLast} 
+                    icon-name="utility:chevronright" 
+                    label="Next"
+                    alternative-text="Next" 
+                    onclick={nextPage} 
+                    class="slds-p-horizontal_x-small"
+                    icon-position="right">
+                </lightning-button>
+                <lightning-button 
+                    disabled={bDisableLast} 
+                    icon-name="utility:jump_to_right" 
+                    label="Last"
+                    alternative-text="last page" 
+                    onclick={lastPage} 
+                    icon-position="right">
+                </lightning-button>
             </div>
         </template>
-        
-        <!--<div class="slds-m-around_medium">-->
-            <!-- First Component -->
-            <div class="slds-m-bottom_medium">
-                <!-- <lightning-card title="Healthy Heart Score"></lightning-card> -->
-                <c-abhi_-hhs-active-age-details record-id={recordId} onuploadstart={handleUploadStart} onuploadend={handleUploadEnd} onerror={handleError}></c-abhi_-hhs-active-age-details>
-                <!-- <lightning-card title="Active Age"></lightning-card> -->
-                <c-abhi_-active-age record-id={recordId} onuploadstart={handleUploadStart} onuploadend={handleUploadEnd}></c-abhi_-active-age>
+
+        <!-- Error Display -->
+        <template if:true={displayError}>
+            <div class="slds-grid slds-align_absolute-center slds-box slds-box_xx-small slds-text-color_error slds-m-bottom_medium" style="font-size: 1.25rem; max-width: 80%; text-align: center;">
+                <lightning-icon icon-name="utility:error" alternative-text="Error" size="small" class="slds-m-right_small"></lightning-icon>
+                <span style="font-size: 0.90rem;">{errorMessages}</span>
             </div>
 
             <template if:true={displayError}>
