--- a/force-app/main/default/lwc/abhi_ActiveDayEventsDetail/abhi_ActiveDayEventsDetail.html
+++ b/force-app/main/default/lwc/abhi_ActiveDayEventsDetail/abhi_ActiveDayEventsDetail.html
@@ -30,9 +30,9 @@
     <template if:true={displayError}>
         <div class="slds-grid slds-align_absolute-center slds-box slds-box_xx-small slds-text-color_error slds-m-bottom_medium" style="font-size: 1.25rem; max-width: 80%; text-align: center;">
             <lightning-icon icon-name="utility:error" alternative-text="Error" size="small" class="slds-m-right_small"></lightning-icon>
-            {errorMessage}
+            <span style="font-size: 0.90rem;">{errorMessage}</span> 
         </div>
-    </template>       
+    </template>     
     </lightning-card>
     
 </template>
