--- a/force-app/main/default/lwc/abhi_ActiveDaysDashboard/abhi_ActiveDaysDashboard.html
+++ b/force-app/main/default/lwc/abhi_ActiveDaysDashboard/abhi_ActiveDaysDashboard.html
@@ -14,7 +14,7 @@
                     <lightning-spinner alternative-text="Loading" size="large"></lightning-spinner>
                 </div>
             </template>
-            <div style="position: absolute; top: 10px; right: 10px; z-index: 10;">
+            <div style="position: absolute; top: 0px; right: 10px; z-index: 10;">
                 <lightning-button-icon icon-name="utility:refresh" alternative-text="Refresh" title="Refresh" size="medium" onclick={handleRefresh}></lightning-button-icon>
             </div>
             <lightning-layout class="slds-m-bottom_large slds-grid slds-wrap">
@@ -28,8 +28,8 @@
                             label="End Date" class="inpFieldCheckValidity" format='YYYY-MM-dd'>
                         </lightning-input>
                     </lightning-layout-item>
-                <lightning-layout-item size="auto" class="slds-m-top_medium slds-m-left_medium">
-                    <lightning-button variant="brand" label="Search" onclick={handleSearch} disabled={isSearchDisabled} ></lightning-button>
+                    <lightning-layout-item size="auto" style="margin-top: 20px; margin-left: 16px;">
+                        <lightning-button variant="brand" label="Search" onclick={handleSearch} disabled={isSearchDisabled} ></lightning-button>
                 </lightning-layout-item>                
             </lightning-layout>
             <template if:true={displayErrorSearch}>
