--- a/force-app/main/default/lwc/abhi_ViewPolicyInformation_LWC/abhi_ViewPolicyInformation_LWC.html
+++ b/force-app/main/default/lwc/abhi_ViewPolicyInformation_LWC/abhi_ViewPolicyInformation_LWC.html
@@ -28,7 +28,7 @@
                 <div class="slds-p-around_none slds-m-top_x-small slds-m-bottom_medium slds-m-horizontal_none">
                     <lightning-layout class="slds-gutters_small">
                         <lightning-layout-item flexibility="auto">
-                            <div class="subHeading">App Registration</div>
+                            <div class="subHeading">App Reg</div>
                             <div class="slds-p-top_xxx-small slds-border_bottom">
                                 <span class="slds-form-element__label">Is Registered</span>
                                 <div class="slds-form-element__static">{policyData.AppRegDetails.IsRegistered}</div>
