--- a/force-app/main/default/lwc/abhi_FALevelDetails/abhi_FALevelDetails.html
+++ b/force-app/main/default/lwc/abhi_FALevelDetails/abhi_FALevelDetails.html
@@ -19,7 +19,7 @@
                         label="End Date"  class="inpFieldCheckValidity" format='YYYY-MM-dd'>
                     </lightning-input>
                 </lightning-layout-item>
-                <lightning-layout-item  class="slds-m-right_small" style="padding-top:19px">
+                <lightning-layout-item  size="auto" style="margin-top: 20px; margin-left: 16px;">
                     <lightning-button variant="brand" label="Search" onclick={handleSearchClick} disabled={isSearchDisabled} ></lightning-button>
                 </lightning-layout-item>                
             </lightning-layout>
