--- a/force-app/main/default/lwc/abhi_FALevelDetails/abhi_FALevelDetails.html
+++ b/force-app/main/default/lwc/abhi_FALevelDetails/abhi_FALevelDetails.html
@@ -20,7 +20,7 @@
                         class="inpFieldCheckValidity" format='YYYY-MM-dd' disabled={disabled}>
                     </lightning-input>
                 </lightning-layout-item>
-                <lightning-layout-item size="auto" class="slds-m-top_medium slds-m-left_medium">
+                <lightning-layout-item  size="auto" style="margin-top: 20px; margin-left: 16px;">
                     <lightning-button variant="brand" label="Search" onclick={handleSearchClick} disabled={isSearchDisabled} ></lightning-button>
                 </lightning-layout-item>                
             </lightning-layout>
